public/css/style.css
body {
    background-color: #F7F7F7;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 90%;
}

#btns-slide-wheel {
    display: flex;
    flex-direction: row;
    justify-content: center;
    text-align: center;
    flex-wrap: wrap;
}


#slideWrapper {
    margin: 1em;
    position: relative;
    overflow: hidden;
}

#searchButtonsContainer {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.searchButtons {
    width: 100%;
    height: 5em;
    border-radius: 2em;
    margin-top: 1em;
}

/* container of .team */
#teamSlideWheel {
    background-color: white;
    height: 100px;
    width: 100%;
    max-width: 100%;
    display: flex;
    list-style: none;
    margin: auto;
    padding: 5px;
    overflow: hidden;
    scroll-behavior: smooth;
    box-shadow: inset -5px 0px 10px 4px lightgrey;
    box-shadow: outset 0px 0px 0px lightgrey;
}

#select-team {
    text-align: center;
    font-size: 2em;
}

#select-team select {
    font-size: 1em;
}

#resultsTeamTitle {
    width: 100%;
    text-align: center;
    margin: 1em;
    color: black;
}

/* container of .news-card */
#news-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    text-align: center;
    width: 100%;
    justify-content: center;
}

.news-card {
    background-color: white;
    border-radius: 1em;
    width: 100%;
    padding: 1em;
    margin: 5px;
    box-shadow: 0px 5px 10px lightgrey;
}

.news-card-thumbnail {
    width: 100%;
    height: auto;
}

.select-team {
    display: flex;
    text-align: center;
    justify-content: center;
}

.team {
    width: 100%;
    max-width: 100px;
    height: 100%;
    max-height: 100px;
    flex: 1 0 100%;
    transition: 0.2s;
}

.team:hover {
    transform: scale(1.3);
}

.team:active{
    transform: scale(1.1);
}

.btn {
    width: 6em;
    height: 3em;
}

.team-logo {
    width: 100px;
    height: 100px;
}

.loader {
    border: 16px solid #f3f3f3; /* Light grey */
    border-top: 16px solid #3498db; /* Blue */
    border-radius: 50%;
    margin: auto;
    width: 120px;
    height: 120px;
    animation: spin 1s linear infinite;
}

.form-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
    width: 100%;
    height: auto;
    /*border: 2px solid blue;*/
}

input[type="text"], input[type="password"] {
    padding-top: 10px;
    padding-bottom: 10px;
}

.form-card {
    background-color: white;
    border-radius: 1em;
    margin: 0.50em;
    width: 30%;
    max-width: 30%;
    padding: 0.25em 1em 0.25em 1em;
    box-shadow: 0px 5px 10px lightgrey;
}

.form-card > * {
    text-align: center;
}

.form-group {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    padding: 1em;
}

.form-group > * {
    width: 100%;
    height: auto;
    border-radius: 0.5em;
    text-align: center;
    margin: 0 auto;
}


.form-group button {
    background-color: blue;
    width: 100%;
    color: white;
    border: none;
    height: 2.5em;
}

.form-group button:hover {
    background-color: white;
    color: blue;
    border: 2px solid blue;
    height: 2.5em;
}

.nav-container {
    width: 100%;
}

.g_signin_container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    align-items: center;
    padding-bottom: 2em;
    text-align: center;
}

.g_signin_container > * {
    width: 100%;
    height: auto;
}

  
@keyframes spin {
0% { transform: rotate(0deg); }
100% { transform: rotate(360deg); }
}


/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
    .news-card {
        max-width: 35%;
    }

    /*body{color: green;}*/
    .form-card {margin-top: 2em;}

    #searchButtonsContainer {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: space-around;
    }
    
    .searchButtons {
        width: 30%;
        height: 5em;
        border-radius: 2em;
        transition: all .2s ease-in;
    }

    .searchButtons:hover {
        transform: scale(1.15);
    }
}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
    .news-card {
        max-width: 25%;
    }

    /*body {color: red;}*/
    .form-card {margin-top: 2em;}
}


/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
    .news-card {
        max-width: 20%;
    }

    /*body {color: blue;}*/
    .form-card {margin-top: 5em;}
}

